<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ausrine.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--Title and Image-->

        <ImageView
            style="@style/imageStyle"
            android:contentDescription="@string/app_name"
            android:src="@drawable/title"/>

        <TextView
            style="@style/headerText"
            android:text="@string/welcome" />

        <!--Insert Name-->

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="@dimen/textWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inputType="textCapSentences"
            android:hint="@string/name" />

        <!--Gender-->

        <TextView
            android:id="@+id/gender"
            style="@style/headerText"
            android:text="@string/gender" />

        <CheckBox
            android:id="@+id/genderm"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderm" />

        <CheckBox
            android:id="@+id/genderf"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderf" />

        <!--Name Question 1-->

        <TextView
            style="@style/headerText"
            android:text="@string/q6" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/pokemon6" />

        <RadioGroup
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ1Clicked"
                android:text="@string/q6a1" />

            <RadioButton
                android:id="@+id/q1a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ1Clicked"
                android:text="@string/q6a2" />

            <RadioButton
                android:id="@+id/q1a3_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ1Clicked"
                android:text="@string/q6a3" />
        </RadioGroup>

        <!--Type Question 1-->

        <TextView
            style="@style/headerText"
            android:text="@string/typeq" />

        <LinearLayout
            style="@style/linearLayoutStyleHorizontal">

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq1a1_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa15" />

                <CheckBox
                    android:id="@+id/typeq1a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa18" />

                <CheckBox
                    android:id="@+id/typeq1a3_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa11" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq1a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa14" />

                <CheckBox
                    android:id="@+id/typeq1a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa16" />

                <CheckBox
                    android:id="@+id/typeq1a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa3" />
            </LinearLayout>

        </LinearLayout>

        <!--Name Question 2-->

        <TextView
            style="@style/headerText"
            android:text="@string/q7" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/pokemon7" />

        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2a1_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ2Clicked"
                android:text="@string/q7a1" />

            <RadioButton
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ2Clicked"
                android:text="@string/q7a2" />

            <RadioButton
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ2Clicked"
                android:text="@string/q7a3" />
        </RadioGroup>

        <!--Type Question 2-->

        <TextView
            style="@style/headerText"
            android:text="@string/typeq" />

        <LinearLayout
            style="@style/linearLayoutStyleHorizontal">

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq2a1_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa4" />

                <CheckBox
                    android:id="@+id/typeq2a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa9" />

                <CheckBox
                    android:id="@+id/typeq2a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa17" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq2a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa14" />

                <CheckBox
                    android:id="@+id/typeq2a5_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa8" />

                <CheckBox
                    android:id="@+id/typeq2a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa13" />
            </LinearLayout>

        </LinearLayout>

        <!--Name Question 3-->

        <TextView
            style="@style/headerText"
            android:text="@string/q8" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/pokemon8" />

        <RadioGroup
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3a1_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ3Clicked"
                android:text="@string/q8a1" />

            <RadioButton
                android:id="@+id/q3a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ3Clicked"
                android:text="@string/q8a2" />

            <RadioButton
                android:id="@+id/q3a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ3Clicked"
                android:text="@string/q8a3" />
        </RadioGroup>

        <!--Type Question 3-->

        <TextView
            style="@style/headerText"
            android:text="@string/typeq" />

        <LinearLayout
            style="@style/linearLayoutStyleHorizontal">

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq3a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa17" />

                <CheckBox
                    android:id="@+id/typeq3a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa7" />

                <CheckBox
                    android:id="@+id/typeq3a3_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa3" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq3a4_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa1" />

                <CheckBox
                    android:id="@+id/typeq3a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa11" />

                <CheckBox
                    android:id="@+id/typeq3a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa13" />
            </LinearLayout>

        </LinearLayout>

        <!--Name Question 4-->

        <TextView
            style="@style/headerText"
            android:text="@string/q9" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/pokemon9" />

        <RadioGroup
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ4Clicked"
                android:text="@string/q9a1" />

            <RadioButton
                android:id="@+id/q4a2_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ4Clicked"
                android:text="@string/q9a2" />

            <RadioButton
                android:id="@+id/q4a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSetQ4Clicked"
                android:text="@string/q9a3" />
        </RadioGroup>

        <!--Type Question 4-->

        <TextView
            style="@style/headerText"
            android:text="@string/typeq" />

        <LinearLayout
            style="@style/linearLayoutStyleHorizontal">

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq4a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa1" />

                <CheckBox
                    android:id="@+id/typeq4a2_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa3" />

                <CheckBox
                    android:id="@+id/typeq4a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa15" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayoutStyleVertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/typeq4a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa4" />

                <CheckBox
                    android:id="@+id/typeq4a5_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa11" />

                <CheckBox
                    android:id="@+id/typeq4a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/checkboxa13" />
            </LinearLayout>

        </LinearLayout>

        <!--Last Question-->

        <TextView
            style="@style/headerText"
            android:layout_width="match_parent"
            android:text="@string/editTextQ" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/answerInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:hint="@string/editTextA"
                android:inputType="textCapSentences" />

        </LinearLayout>

        <!--Check Answers-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="showGrading"
            android:text="@string/checkAnswers" />

        <Button
            android:id="@+id/btn_toast_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetGrading"
            android:text="@string/buttonReset" />

    </LinearLayout>

</ScrollView>